# human_pose_burn

./: .gitignore  Cargo.toml  README.md  README_zh.md  copperconfig.linux.ron  copperconfig.mac.ron
src/: logreader.rs  main.rs
src/tasks/: mod.rs  rerun_viz.rs  yolo_pose_burn.rs
src/yolo/: mod.rs  model.rs  postprocess.rs  preprocess.rs
